[gd_scene load_steps=16 format=3 uid="uid://5i7y4qtqe0xo"]

[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_select_player_mode.gd" id="1_ygq3w"]
[ext_resource type="Texture2D" uid="uid://plnk2l8lsbca" path="res://assets/titlescreen/3.webp" id="2_dyrpk"]
[ext_resource type="FontFile" uid="uid://u3ide4v6ikg2" path="res://assets/kenney_ui-pack-space-expansion/Font/Kenney Future.ttf" id="3_xw8yi"]
[ext_resource type="Texture2D" uid="uid://xcbrtpl5n6q0" path="res://assets/kenney_ui-pack-space-expansion/PNG/Grey/Default/bar_square_gloss_large.png" id="4_3ag5j"]
[ext_resource type="Texture2D" uid="uid://yxdlb6fgqy45" path="res://assets/kenney_ui-pack-space-expansion/buttons/bar_square_gloss_large_black_pressed.png" id="5_hr5ku"]
[ext_resource type="Texture2D" uid="uid://cyomx7lrxu7ay" path="res://assets/kenney_ui-pack-space-expansion/buttons/bar_square_gloss_large_black.png" id="6_ev4lc"]
[ext_resource type="Script" path="res://scripts/ui/button/text_texture_button.gd" id="7_v8a6y"]
[ext_resource type="Texture2D" uid="uid://d4efsx60y2bq" path="res://assets/kenney_ui-pack-space-expansion/PNG/Grey/Double/bar_square_gloss_small.png" id="8_k8dl0"]
[ext_resource type="Script" path="res://scripts/ui/button/custom_label.gd" id="8_nbc2e"]
[ext_resource type="Texture2D" uid="uid://c7vf3cqe17e5c" path="res://assets/kenney_ui-pack-space-expansion/PNG/Extra/Double/bar_shadow_round_large.png" id="10_si4c4"]

[sub_resource type="Theme" id="Theme_1ligb"]
default_font = ExtResource("3_xw8yi")

[sub_resource type="Theme" id="Theme_e8cec"]
default_font_size = 60

[sub_resource type="Theme" id="Theme_uqax8"]
default_font = ExtResource("3_xw8yi")

[sub_resource type="Theme" id="Theme_8vh0w"]
default_font = ExtResource("3_xw8yi")
default_font_size = 40

[sub_resource type="Theme" id="Theme_w0c6i"]
default_font = ExtResource("3_xw8yi")
default_font_size = 60

[node name="SelectPlayerMode" type="Node2D"]
script = ExtResource("1_ygq3w")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.072, 1.056)
texture = ExtResource("2_dyrpk")
centered = false

[node name="Singpleplayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -148.0
offset_right = 40.0
offset_bottom = -108.0
theme = SubResource("Theme_1ligb")

[node name="Button" type="TextureButton" parent="Singpleplayer" node_paths=PackedStringArray("label")]
layout_mode = 0
offset_left = 520.0
offset_top = 783.0
offset_right = 994.0
offset_bottom = 814.0
scale = Vector2(1.92208, 3.08833)
texture_normal = ExtResource("4_3ag5j")
texture_pressed = ExtResource("5_hr5ku")
texture_hover = ExtResource("6_ev4lc")
stretch_mode = 0
script = ExtResource("7_v8a6y")
label = NodePath("../Label")

[node name="Label" type="Label" parent="Singpleplayer"]
layout_mode = 0
offset_left = 557.0
offset_top = 783.0
offset_right = 1395.0
offset_bottom = 878.0
theme = SubResource("Theme_e8cec")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Singleplayer"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_nbc2e")

[node name="MultiplayerLocal" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -16.0
offset_right = 40.0
offset_bottom = 24.0
theme = SubResource("Theme_1ligb")

[node name="Button" type="TextureButton" parent="MultiplayerLocal" node_paths=PackedStringArray("label")]
layout_mode = 0
offset_left = 520.0
offset_top = 783.0
offset_right = 994.0
offset_bottom = 814.0
scale = Vector2(1.92208, 3.08833)
texture_normal = ExtResource("4_3ag5j")
texture_pressed = ExtResource("5_hr5ku")
texture_hover = ExtResource("6_ev4lc")
stretch_mode = 0
script = ExtResource("7_v8a6y")
label = NodePath("../Label")

[node name="Label" type="Label" parent="MultiplayerLocal"]
layout_mode = 0
offset_left = 560.0
offset_top = 783.0
offset_right = 1394.0
offset_bottom = 878.0
theme = SubResource("Theme_e8cec")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Local Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_nbc2e")

[node name="MultiplayerOnline" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 120.0
offset_right = 40.0
offset_bottom = 160.0
theme = SubResource("Theme_1ligb")

[node name="Button" type="TextureButton" parent="MultiplayerOnline" node_paths=PackedStringArray("label")]
layout_mode = 0
offset_left = 520.0
offset_top = 783.0
offset_right = 994.0
offset_bottom = 814.0
scale = Vector2(1.92208, 3.08833)
texture_normal = ExtResource("4_3ag5j")
texture_pressed = ExtResource("5_hr5ku")
texture_hover = ExtResource("6_ev4lc")
stretch_mode = 0
script = ExtResource("7_v8a6y")
label = NodePath("../Label")

[node name="Label" type="Label" parent="MultiplayerOnline"]
layout_mode = 0
offset_left = 560.0
offset_top = 783.0
offset_right = 1394.0
offset_bottom = 878.0
theme = SubResource("Theme_e8cec")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Online Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_nbc2e")

[node name="Back" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1046.0
offset_top = 239.0
offset_right = 1086.0
offset_bottom = 279.0
theme = SubResource("Theme_uqax8")

[node name="Background" type="TextureButton" parent="Back" node_paths=PackedStringArray("label")]
layout_mode = 0
offset_left = 700.0
offset_top = 752.0
offset_right = 772.0
offset_bottom = 774.0
scale = Vector2(2.125, 3.20833)
texture_normal = ExtResource("8_k8dl0")
texture_pressed = ExtResource("5_hr5ku")
texture_hover = ExtResource("6_ev4lc")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_v8a6y")
label = NodePath("../Label")

[node name="Label" type="Label" parent="Back"]
layout_mode = 0
offset_left = 706.0
offset_top = 765.0
offset_right = 847.0
offset_bottom = 810.0
theme = SubResource("Theme_8vh0w")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_nbc2e")

[node name="Mode" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BarShadowRoundLarge" type="Sprite2D" parent="Mode"]
position = Vector2(960, 478)
scale = Vector2(3.1875, 2.70833)
texture = ExtResource("10_si4c4")

[node name="Heading" type="Label" parent="Mode"]
layout_mode = 0
offset_left = 654.0
offset_top = 414.0
offset_right = 1267.0
offset_bottom = 543.0
theme = SubResource("Theme_w0c6i")
text = "player mode"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Singpleplayer/Button" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="MultiplayerLocal/Button" to="." method="_on_multiplayer_local_button_pressed"]
[connection signal="pressed" from="MultiplayerOnline/Button" to="." method="_on_multiplayer_online_button_pressed"]
[connection signal="pressed" from="Back/Background" to="." method="_on_back_button_pressed"]
